--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,5 +1,4 @@
-<div class="footer">
-<table width="100%">
+<table class="footer">
 <tr>
     <td><img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" 
 alt="Con la tecnología de Google App Engine" /></td>
@@ -9,6 +8,5 @@ alt="Con la tecnología de Google App Engine" /></td>
     </td>
 </tr>
 </table>
-</div>
 </body>
 </html>
