--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -5,10 +5,18 @@
     <div class="message">You are admin, you can go to <a href="/admin/">admin dashboard</a>.</div>
 {% endif %}
 
-<table width="100%" height="600">
+<table class="main">
 <tr>
-    <td align="center"><a href="/new">new stream</a></td>
-    <td align="center"><a href="/random">random stream</a></td>
+    <td align="center">
+        <a href="/new">new stream</a>
+        <br/>
+        The easy way to share data between computers!
+    </td>
+    <td align="center">
+        <a href="/random">random stream</a>
+        <br/>
+        Look a random stream. What are people sharing?
+    </td>
 </tr>
 </table>
 
