Web almos completed! GTK client ready!

--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,12 +1,6 @@
-<table class="footer">
-<tr>
-    <td><img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" 
-alt="Con la tecnología de Google App Engine" /></td>
-    <td align="right">
-        <a href="mailto:admin@pystream.com">Contact</a> |
-        Copyright © 2011 by Carlos García Gómez.
-    </td>
-</tr>
-</table>
+<div class="footer">
+    <a href="mailto:admin@pystream.com">Contact</a> |
+    Copyright © 2011 by Carlos García Gómez.
+</div>
 </body>
 </html>
