--- a/server/templates/admin.html
+++ b/server/templates/admin.html
@@ -1,58 +1,24 @@
 {% include "header.html" %}
+<div class="arrow" id="menu"></div>
 <div class="body">
 
-<table class="custom">
-<tr class="top">
-    <td>Stream</td>
-    <td>LAN IP</td>
-    <td>Description</td>
-    <td>Password</td>
-    <td>Comments</td>
-    <td align="right">Date</td>
-</tr>
-{% for stream in streams %}
-    <tr>
-        <td><a href="{{ stream.get_link }}">{{ stream.ip|full_ip }}:{{ stream.port }}</a></td>
-        <td>{{ stream.lan_ip|full_ip }}</td>
-        <td>{{ stream.description|truncatewords:15 }}</td>
-        {% if stream.password %}
-            <td>Yes</td>
-        {% else %}
-            <td>No</td>
-        {% endif %}
-        <td>{{ stream.comments }}</td>
-        <td align="right">{{ stream.date|date:"d/m/Y H:i" }}</td>
-    </tr>
-{% empty %}
-    <tr><td>empty!</td></tr>
-{% endfor %}
-</table>
+<center>
+    <a href="/admin/streams">streams</a>
+    | <a href="/admin/reports">reports</a>
+    | <a href="/admin/stats">stats</a>
+</center>
 
-<br/>
-
-<table class="custom">
-<tr class="top">
-    <td>Reports</td>
-</tr>
-{% for rep in reports %}
-    <tr>
-        <td>
-        <b>Link</b>: <a href="{{ rep.get_link }}">{{ rep.link }}</a>
-        <b>from</b>: {{ rep.ip|full_ip }}
-        <b>with</b>: {{ rep.os|show_os }}
-        <b>on</b>: {{ rep.date|date:"d/m/Y H:i" }}
-        | <a href="/admin?rm_report={{ rep.key }}">remove</a>
-        <br/>
-        {{ rep.text|safe|linebreaksbr|urlize }}
-        </td>
-    </tr>
-{% empty %}
-    <tr><td>empty!</td></tr>
-{% endfor %}
-</table>
-
-<br/><br/>
-<div><a href="{{ logout }}">logout</a></div>
+{% if stats %}
+    <div class="section">
+        <div class="title">Stats:</div>
+        Streams: {{ stats.streams }}, 
+        Publics: {{ stats.publics }} ({{ stats.public_relation }}%),
+        Online: {{ stats.online }} ({{ stats.online_relation }}%),  
+        Sharing: {{ stats.sharing|size }} ({{ stats.share_relation|size }}/stream), 
+        Comments: {{ stats.comments }} ({{ stats.comments_relation }}/stream), 
+        Reports: {{ stats.reports }}.
+    </div>
+{% endif %}
 
 </div>
 {% include "footer.html" %}
