--- a/server/templates/header.html
+++ b/server/templates/header.html
@@ -1,158 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>{{ title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="{{ description }}" />
     <meta name="Robots" content="all" />
-    <style type="text/css">
-    body {
-        background-color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 13px;
-        margin: 0px;
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-    
-    a {
-        font-weight: bold;
-        text-decoration: none;
-    }
-    
-    a:hover {
-        text-decoration: underline;
-    }
-    
-    img {
-        vertical-align: middle;
-        border-width: 0;
-    }
-    
-    textarea {
-        width: 99%;
-    }
-    
-    hr {
-        border: 1px dashed #191919;
-    }
-    
-    table.header {
-        width: 100%;
-        color: white;
-        font-size: 15px;
-        background-color: #191919;
-        border-left: 10px solid #191919;
-        border-right: 10px solid #191919;
-        border-bottom-left-radius: 8px 8px;
-        border-bottom-right-radius: 8px 8px;
-        margin-bottom: 10px;
-    }
-    
-    table.header a {
-        color: white;
-    }
-    
-    div.body {
-        min-height: 700px;
-    }
-    
-    table.main {
-        width: 100%;
-        height: 600px;
-        font-size: 18px;
-    }
-    
-    div.message {
-        text-align: center;
-        background-color: #feffc0;
-        border-top: 1px solid #e1e16e;
-        border-bottom: 1px solid #e1e16e;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 5px;
-        font-size: 15px;
-    }
-    
-    div.section {
-        width: 95%;
-        margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-    }
-    
-    div.title {
-        font-size: 16px;
-        border-bottom: 1px solid #191919;
-    }
-    
-    div.stream_description {
-        background-color: #EFEFEF;
-        border: 1px solid #DEDEDE;
-        padding: 5px;
-        font-size: 17px;
-    }
-    
-    div.stream_info {
-        font-size: 11px;
-        margin-top: 0px;
-        margin-bottom: 15px;
-        padding: 0px;
-    }
-    
-    table.comments {
-        width: 100%;
-    }
-    
-    table.comments tr.comment:hover {
-        background-color: #EFEFEF;
-    }
-    
-    table.comments td {
-        vertical-align: top;
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-    
-    table.comments td.autor {
-        width: 110px;
-        border-bottom: 1px solid silver;
-    }
-    
-    table.comments td.text {
-        padding-left: 5px;
-        border-bottom: 1px solid silver;
-    }
-    
-    table.custom {
-        width: 100%;
-    }
-    
-    table.custom tr.top td {
-        border-bottom: 1px solid black;
-    }
-    
-    table.custom tr:hover {
-        background-color: #EFEFEF;
-    }
-    
-    table.footer {
-        width: 100%;
-        margin-top: 10px;
-    }
-    
-    table.footer a {
-        color: black;
-    }
-    </style>
+    <link rel="stylesheet" href="/css/web.css" type="text/css" />
+    <script type="text/javascript" src="/js/basic.js"></script>
 </head>
-<body>
-<table class="header">
-<tr>
-    <td><a href="/">pystream</a> (alpha)</td>
-    <td align="right"><a href="/new">new stream</a></td>
-    <td align="center" width="20">|</td>
-    <td width="120"><a href="/random">random stream</a></td>
-</tr>
-</table>
+<body onload="{{ onload }}">
+<div class="top_right">
+    <a href="/new">new</a>
+    | <a href="/random">random</a>
+    | <a href="/search">search</a>
+    {% if admin %}
+        | <a href="/admin/">admin</a>
+        | <a href="{{ logout }}">logout</a>
+    {% endif %}
+</div>
+<div class="header">
+    <img src="/img/logo.png"/>
+    <a href="/">pystream</a> (alpha)
+    {% if stream %}
+        <a href="/s/{{ stream.key.id }}">{{ stream.key.id }}</a>
+    {% endif %}
+    {% if stream.password %}
+        <img src="/img/mini-lock.png" alt="locked" title="password protected"/>
+    {% endif %}
+</div>
