--- a/server/templates/stream.html
+++ b/server/templates/stream.html
@@ -1,13 +1,77 @@
 {% include "header.html" %}
-<div class="body">
-
-<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 <script type="text/javascript" src="http://www.google.com/buzz/api/button.js"></script>
+
+<div class="arrow" id="streamid"></div>
+<div class="body">
+
+<table class="social_buttons">
+<tr>
+    <td>Sharing: {{ stream.size|size }}</td>
+    <td align="center">
+    <table>
+    <tr>
+        <td><a title="Share on Google Buzz" class="google-buzz-button" href="http://www.google.com/buzz/post" data-button-style="small-count" data-locale="es"></a></td>
+        <td><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a></td>
+        <td><iframe src="http://www.facebook.com/plugins/like.php?href&amp;send=true&amp;layout=button_count&amp;width=150&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:21px;" allowTransparency="true"></iframe></td>
+    </tr>
+    </table>
+    </td>
+    <td align="right"><a href="/report?link={{ stream.get_link }}">report an issue</a></td>
+</tr>
+</table>
+
+{% if publisher or admin %}
+<div class="stream_description">
+    <form name="stream" action="/mod_stream" method="post">
+    <input type="hidden" name="key" value="{{ stream.key }}"/>
+    Description:<br/>
+    <textarea name="description" rows="4" cols="60">{{ stream.description|safe }}</textarea>
+    <br/>
+    {% if stream.public %}
+        <input type="radio" name="public" value="True" checked="True"
+         title="will be avaliable for everyone on the internet"
+         onclick="set_public_stream()"/>
+        <span title="will be avaliable for everyone on the internet">public</span>
+        &nbsp;
+        <input type="radio" name="public" value="False"
+         title="will be removed after 24 hours"
+         onclick="set_private_stream()"/>
+        <span title="will be removed after 24 hours">private</span>
+    {% else %}
+        <input type="radio" name="public" value="True"
+         title="will be avaliable for everyone on the internet"
+         onclick="set_public_stream()"/>
+        <span title="will be avaliable for everyone on the internet">public</span>
+        &nbsp;
+        <input type="radio" name="public" value="False" checked="True"
+         title="will be removed after 24 hours"
+         onclick="set_private_stream()"/>
+        <span title="will be removed after 24 hours">private</span>
+    {% endif %}
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    password (optional): 
+    <input type="password" name="password" size='15' maxlength='15' value="{{ stream.password }}"/>
+    <input type="submit" value="send"/>
+    </form>
+</div>
+{% else %}
+<div class="stream_description">
+    {{ stream.description|safe|urlize }}
+</div>
+{% endif %}
+<div class="stream_info">
+    {{ stream.date|date:"d/m/Y H:i" }}
+    | {{ stream.os|show_platform }}
+    | {{ stream.status_text }}
+</div>
 
 <table width="100%">
 <tr>
     <td width="40%" valign="top">
+    {% if stream.strikes > 0 %}
+        <div class="message">This stream is not working propertly!</div>
+    {% endif %}
     {% if local %}
         <iframe src="http://{{ stream.lan_ip|full_ip }}:{{ stream.port }}" width="100%" height="800" frameborder="0">
             You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
@@ -18,44 +82,11 @@
         </iframe>
     {% endif %}
     {% if admin %}
-        <br/><a href="/s/?rm={{ stream.key }}">remove stream</a>
+        <br/><a href="#" onclick="remove_stream('{{ stream.key }}')">remove stream</a>
     {% endif %}
     </td>
     <td valign="top">
-        <table>
-        <tr>
-            <td><a title="Share on Google Buzz" class="google-buzz-button" href="http://www.google.com/buzz/post" data-button-style="small-count" data-locale="es"></a></td>
-            <td><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a></td>
-            <td><fb:like href="" show_faces="true" width="450" font=""></fb:like></td>
-            <td align="right"><a href="/report?link={{ stream.get_link }}">report an issue</a></td>
-        </tr>
-        </table>
-        
-        {% if stream.password %}
-            <div class="message">This stream is password protected</div>
-        {% endif %}
-        
-        {% if publisher or admin %}
-            <form name="stream" action="/mod_stream" method="post">
-            <input type="hidden" name="key" value="{{ stream.key }}"/>
-            <b>Description</b>:<br/>
-            <textarea name="description" rows="4" cols="60">{{ stream.description|safe }}</textarea>
-            <br/><b>Password</b> (optional): 
-            <input type="password" name="password" size='20' maxlength='20' value="{{ stream.password }}"/>
-            <input type="submit" value="send"/>
-            </form>
-            <br/>
-        {% else %}
-            <div class="stream_description">
-                {{ stream.description|safe|urlize }}
-            </div>
-            <div class="stream_info">
-                {{ stream.date|date:"d/m/Y H:i" }}
-                | {{ stream.comments }} comments
-            </div>
-        {% endif %}
-        
-        <div class="title">Comments:</div>
+        <div class="title">Comments ({{ stream.comments }}):</div>
         <table class="comments">
         {% for comment in comments %}
         <tr class="comment">
@@ -69,7 +100,7 @@
                 {% if admin %}
                     {{ comment.ip|full_ip }}
                     <br/>
-                    <a href="/comment?idc={{ comment.key.id }}">remove</a>
+                    <a href="#" onclick="remove_comment('{{ comment.key }}')">remove</a>
                 {% endif %}
             </td>
             <td class="text">{{ comment.text|safe|linebreaksbr|urlize }}</td>
