--- a/server/templates/stream_ask_password.html
+++ b/server/templates/stream_ask_password.html
@@ -1,18 +1,24 @@
 {% include "header.html" %}
+<div class="arrow" id="main"></div>
 <div class="body">
 
 <div class="message">This stream is password protected</div>
 <br/>
 <br/>
 <br/>
-<center>
-    <form name="stream" action="/sp/{{ streamid }}" method="post">
-    <b>Password:</b>
-    <input type="password" name="password" size='20' maxlength='20' value=""/>
-    <br/>{{ captcha|safe }}
-    <input type="submit" value="send"/>
-    </form>
-</center>
+<table align="center">
+<tr>
+    <td><img src="/img/candado.gif"/></td>
+    <td>
+        <form name="stream" action="/sp/{{ streamid }}" method="post">
+        <b>Password:</b>
+        <input type="password" name="password" size='20' maxlength='20' value=""/>
+        <br/>{{ captcha|safe }}
+        <input type="submit" value="send"/>
+        </form>
+    </td>
+</tr>
+</table>
 
 </div>
 {% include "footer.html" %}
