Web prototype ready!

--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -37,14 +37,14 @@
 <table class="main">
 <tr>
     <td align="center">
-        <a href="/new"><img src="/img/notebook.jpg"/></a>
+        <a href="/new"><img src="/img/notebook.png"/></a>
         <br/>
         <a href="/new">new stream</a>
         <br/>
         The easy way to share data between computers!
     </td>
     <td align="center">
-        <a href="/random"><img src="/img/dados.jpg"/></a>
+        <a href="/random"><img src="/img/dados.png"/></a>
         <br/>
         <a href="/random">random stream</a>
         <br/>
