--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -28,7 +28,7 @@
             <a href="#" onclick="this_is_alpha()">Linux</a>
         </td>
         <td align="center">
-            <a href="#" onclick="this_is_alpha()"><img src="/img/mac.jpg"/></a>
+            <a href="#" onclick="this_is_alpha()"><img src="/img/mac.png"/></a>
             <br/>
             <a href="#" onclick="this_is_alpha()">Mac</a>
         </td>
