--- a/server/templates/stream_ask_password.html
+++ b/server/templates/stream_ask_password.html
@@ -8,7 +8,7 @@
 <br/>
 <table align="center">
 <tr>
-    <td><img src="/img/candado.gif"/></td>
+    <td><img src="/img/candado.png" alt="Lock" title="http://www.iconarchive.com/show/i-love-icons-by-svengraph/Lock-icon.html"/></td>
     <td>
         <form name="stream" action="/sp/{{ streamid }}" method="post">
         <b>Password:</b>
