Client: - Better GTK gui. - Full Tkinter gui. - Multi-thread mini-server.
Server:
- Author page.
- Previous searches.
- Better performance.

--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <a href="mailto:admin@pystream.com">Contact</a> |
-    Copyright © 2011 by Carlos García Gómez.
+    Copyright © 2011 by <a href="/author" title="pystream's author">NeoRazorX</a>.
 </div>
 </body>
 </html>
