--- a/server/css/web.css
+++ b/server/css/web.css
@@ -88,7 +88,7 @@ div.arrow#main {
 }
 
 div.arrow#streamid {
-    margin-left: 235px;
+    margin-left: 240px;
 }
 
 div.arrow#menu {
@@ -96,11 +96,27 @@ div.arrow#menu {
     margin-left: auto;
 }
 
+div.arrow_down {
+    background-image: url('/img/arrow_down.png');
+    background-repeat: no-repeat;
+    height: 13px;
+    width: 50px;
+    margin-bottom: 10px;
+    margin-right: 5px;
+    margin-left: auto;
+}
+
+div.no_arrow {
+    height: 13px;
+    width: 50px;
+    margin-top: 10px;
+}
+
 div.body {
     min-height: 700px;
     background-color: white;
     margin-top: 0px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-top-left-radius: 8px 8px;
@@ -259,7 +275,7 @@ div.pages span#current a {
 
 div.footer {
     text-align: right;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 div.footer a {
