--- a/server/templates/author.html
+++ b/server/templates/author.html
@@ -64,7 +64,7 @@
             <li>Server: Built over <a href="http://code.google.com/intl/es-ES/appengine/">Google app engine</a>
             (python + memcahe + django + GQL)</li>
             <li>Linux client: python + pyGTK.</li>
-            <li>Windows/Mac clients: python + Tkinter.</li>
+            <li>Windows/Mac clients: python + Tcl/Tk.</li>
         </ul>
     </ul>
 </div>
