--- a/server/templates/header.html
+++ b/server/templates/header.html
@@ -3,6 +3,7 @@
 <head>
     <title>{{ title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="pystream, stream, python, share, files, lan party, lan parties, linux" />
     <meta name="description" content="{{ description }}" />
     <meta name="Robots" content="all" />
     <link rel="stylesheet" href="/css/web.css" type="text/css" />
