--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -22,28 +22,32 @@
 </table>
 
 <div class="section">
+    <a name="streams"></a>
     <div class="title">What is pystream?</div>
-    Pystream is an online service to share data over streams.
-</div>
-
-<div class="section">
-    <div class="title">What is a stream?</div>
-    A stream is basicaly a web server, is defined by a IP and a port.
-    It can be used to share everything you can imagine ... but only folder for now :P<br/>
-    You can easily create a stream by using the <a href="#client">pystream client</a>,
-    doing this, you can share files between computers (on LAN and Internet).
+    Pystream is a web service for sharing files between computers.
+    You can easily create a stream by using the <a href="#client">pystream client</a>
     <br/><br/>
     There are two types of streams:
     <ul>
-        <li><b>Public streams</b>: avaliable for everyone, on searches and random.</li>
-        <li><b>Private streams</b>: hidden from searches (except from you LAN) and random.
+        <li><b>Public streams</b>: avaliable for everyone, on searches and random.
+        The easiest way to share files with everyone.</li>
+        <li><b>Private streams</b>: hidden from searches (except from you LAN) and random,
+        perfect for local sharing or <a href="#lanparties">LAN Parties</a>.<br/>
         You can also use a password to protect you private stream.</li>
     </ul>
 </div>
 
 <div class="section">
+    <a name="lanparties"></a>
+    <div class="title">LAN Parties:</div>
+    Download the <a href="#client">pystream client</a>, create the streams and enjoy.<br/>
+    All streams (public or private) from your LAN will be shown on the <a href="/">main page</a>,
+    and will be avaliable for searches (from you LAN).
+</div>
+
+<div class="section">
     <a name="client"></a>
-    <div class="title">Where can i get the pystream client?</div>
+    <div class="title">Where can I get the pystream client?</div>
     Pystream is in alpha state, so only a minimal Linux client is ready,
     for testing purpose only.
     <table align="center">
@@ -68,7 +72,7 @@
 </div>
 
 <div class="section">
-    <div class="title">Can i develop my own client?</div>
+    <div class="title">Can I develop my own client?</div>
     <table width="100%">
     <tr>
         <td valign="top">
