--- a/server/css/client.css
+++ b/server/css/client.css
@@ -9,7 +9,6 @@ body {
 a {
     text-decoration: none;
     color: #1D81B9;
-    font-weight: bold;
 }
 
 div.title {
@@ -19,13 +18,24 @@ div.title {
     margin-bottom: 5px;
 }
 
+div.title a {
+    color: black;
+}
+
 table {
     width: 100%;
     padding-top: 0px;
     margin-top: 0px;
+    font-size: 13px;
+    font-weight: bold;
 }
 
-table td:hover {
+table tr:hover {
     background-color: #EFEFEF;
 }
 
+table td.size {
+    text-align: right;
+    font-size: 11px;
+    font-weight: normal;
+}
